fix: too long info text

--- a/fc-style.user.css
+++ b/fc-style.user.css
@@ -2,7 +2,7 @@
 @name         Desktop Forocoches
 @namespace    nisgrak
 @description  Correcciones al nuevo estilo de Forocoches
-@version      0.0.24
+@version      0.0.25
 @author       Nisgrak
 @homepageURL  https://github.com/Nisgrak/desktop-forocoches
 @updateURL    https://github.com/Nisgrak/desktop-forocoches/raw/main/fc-style.user.css
@@ -284,6 +284,7 @@
                             width: 120px;
                             margin-left: 30px;
                             text-align: center;
+                            word-break: break-word;
 
                             > p:empty {
                                 display: none;
